feat: front end added

--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,8 @@ venv/
 credentials.yaml
 credentials.yml
 .mypy_cache/
-static
+syllabus/static/syllabus/site-data
+bootcamp/static/bootcamp/site-data
 .vscode
 daemon-services/
 !**/migrations/__init__.py
