bug: courses link fixed

--- a/.gitignore
+++ b/.gitignore
@@ -116,10 +116,11 @@ venv/
 credentials.yaml
 credentials.yml
 .mypy_cache/
+migrations
 syllabus/static/syllabus/site-data
 bootcamp/static/bootcamp/site-data
 .vscode
 daemon-services/
-!**/migrations/__init__.py
 venv
 secrets.key
+!**/migrations/__init__.py
